--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,15 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/animaldb
 spring.datasource.username=webuser
 spring.datasource.password=webuser
 
+#???? ??
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
 #log4j2 \uB808\uBCA8 \uC124\uC815 \uAC04\uB2E8\uD788
 logging.level.springframework=info
 logging.level.com.busanit501=debug
 
 #spring jpa \uAD00\uB828 \uC124\uC815.
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 # \uCF58\uC194 \uC0C1\uC5D0 sql \uAD6C\uBB38\uC744 \uD45C\uAE30 \uC5EC\uBD80. \uC774\uC058\uAC8C \uD45C\uAE30
 spring.jpa.properties.hibernate.format_sql=true
 # \uCF58\uC194 \uC0C1\uC5D0 sql \uAD6C\uBB38\uC744 \uD45C\uAE30
