register.html에 common.css, mypage.css 적용시킴. 시큐리티가 정적 자원들 적용을 막는다고 해서 config에 SecurityConfig.java 추가했음. 기존 시큐리티 코드를 못 죽임.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.password=webuser
 
 #???? ??
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+#spring.security.enabled=false
 
 #log4j2 \uB808\uBCA8 \uC124\uC815 \uAC04\uB2E8\uD788
 logging.level.springframework=info
