--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=webuser
 
 #log4j2 \uB808\uBCA8 \uC124\uC815 \uAC04\uB2E8\uD788
 logging.level.springframework=info
-logging.level.com.busanit501=debug
+logging.level.com.project.animalface_web=debug
 
 #spring jpa \uAD00\uB828 \uC124\uC815.
 spring.jpa.hibernate.ddl-auto=update
@@ -65,3 +65,8 @@ logging.level.org.springframework.security = trace
 # update : \uBCC0\uACBD\uC2DC \uBCC0\uACBD\uB41C \uBD80\uBD84\uC774 \uC788\uC744 \uB54C \uC0C8\uB85C\uC0DD\uC131
 # validate : \uBCC0\uACBD\uB41C \uBD80\uBD84\uB9CC \uC54C\uB824\uC8FC\uACE0 \uC885\uB8CC.
 # git commit \uD655\uC778
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
