--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 # \uCF58\uC194 \uC0C1\uC5D0 sql \uAD6C\uBB38\uC744 \uD45C\uAE30
 spring.jpa.show-sql=true
-
+spring.mvc.static-path-pattern=/static/**
 #\uD30C\uC77C \uC5C5\uB85C\uB4DC \uAD00\uB828 \uC124\uC815.
 # \uAD00\uB9AC\uC790\uAC00 \uAD00\uB9AC\uD558\uB294 \uC0C1\uD488, \uC5EC\uD589\uC9C0, \uCE74\uD398\uBA54\uB274, \uB3D9\uBB3C\uC0AC\uC9C4, static \uD558\uC704\uC5D0 \uC774\uBBF8\uC9C0 \uD3F4\uB354
 spring.servlet.multipart.enabled=true
