--- a/build.gradle
+++ b/build.gradle
@@ -31,12 +31,23 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     implementation 'org.modelmapper:modelmapper:2.4.4'
 
+    // 2 몽고 디비
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+
+    // 4 jwt
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // or jjwt-gson
+
+    // 6 gson
+    implementation 'com.google.code.gson:gson:2.8.9'
 
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
@@ -80,7 +91,7 @@ dependencies {
 
     // 시큐리티 도구
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
-//    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.3.0'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.3.0'
 
     // 타임리프 화면에서, 인증된 유저 마다 화면 조건식으로 표현하는 도구
     // https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity6
