--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,17 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/animaldb
 spring.datasource.username=webuser
 spring.datasource.password=webuser
 
+# MongoDB Configuration
+spring.data.mongodb.uri=mongodb://localhost:27017/test
+
+# jwt ???
+com.project.jwt.secret=busanit501_01234567890_01234567890
+
 #log4j2 \uB808\uBCA8 \uC124\uC815 \uAC04\uB2E8\uD788
 logging.level.springframework=info
 logging.level.com.project.animalface_web=debug
 
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 #spring jpa \uAD00\uB828 \uC124\uC815.
 spring.jpa.hibernate.ddl-auto=update
 # \uCF58\uC194 \uC0C1\uC5D0 sql \uAD6C\uBB38\uC744 \uD45C\uAE30 \uC5EC\uBD80. \uC774\uC058\uAC8C \uD45C\uAE30
@@ -25,7 +32,7 @@ spring.servlet.multipart.max-request-size=100MB
 spring.servlet.multipart.max-file-size=100MB
 
 #\uC11C\uBC84\uC5D0\uC11C , \uD574\uB2F9 \uACBD\uB85C\uBA85\uC744 \uC124\uC815 \uD574\uB450\uBA74, \uD328\uD0A4\uC9C0\uBA85\uC73C\uB85C, \uAC01 \uD30C\uC77C\uC5D0\uC11C \uC0AC\uC6A9\uAC00\uB2A5\uD568.
-com.busanit501.upload.path=c:\\upload\\springTest
+com.project.upload.path=c:\\upload\\springTest
 
 # devtools \uB044\uAE30
 spring.devtools.restart.enabled=true
