--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -73,6 +73,13 @@ logging.level.org.springframework.security = trace
 # validate : \uBCC0\uACBD\uB41C \uBD80\uBD84\uB9CC \uC54C\uB824\uC8FC\uACE0 \uC885\uB8CC.
 # git commit \uD655\uC778
 
+#uploadPath ??
+uploadPath=file:/path/to/your/upload/directory/
+
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
