--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,21 +44,21 @@ logging.level.org.springframework.security = trace
 #spring.cache.type=none
 
 ##\uCE74\uCE74\uC624 \uB85C\uADF8\uC778 API \uAD00\uB828 \uC124\uC815
-#spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
-#spring.security.oauth2.client.provider.kakao.user-name-attribute=id
-#spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
-#spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.user-name-attribute=id
+spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
 #
-#spring.security.oauth2.client.registration.kakao.client-name=kakao
-#spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
-#spring.security.oauth2.client.registration.kakao.redirect_uri=http://localhost:8080/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.client-name=kakao
+spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.kakao.redirect_uri=http://localhost:8080/login/oauth2/code/kakao
 ## REST API \uD0A4 \uAC12 \uBCF5\uBD99
-#spring.security.oauth2.client.registration.kakao.client-id=
+spring.security.oauth2.client.registration.kakao.client-id=5fcc63429516b53f135965243894b147
 #
 ## secret \uAC12 \uBCF5\uBD99
-#spring.security.oauth2.client.registration.kakao.client-secret=
-#spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
-#spring.security.oauth2.client.registration.kakao.scope=profile_nickname
+spring.security.oauth2.client.registration.kakao.client-secret=ewBner6MDqe5zQfFWGyCeiH7acPIgVWY
+spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
+spring.security.oauth2.client.registration.kakao.scope=profile_nickname
 
 #spring.jpa.hibernate.ddl-auto=update, \uC124\uBA85
 # \uC5B8\uC81C \uC0AC\uC6A9\uD558\uB290\uB0D0? \uAC1C\uBC1C\uD658\uACBD\uC77C \uB54C, update \uB610\uB294 \uD544\uC694\uC2DC \uB9C8\uB2E4
